fix z-index ordering

--- a/resume/src/components/Header/Header.css
+++ b/resume/src/components/Header/Header.css
@@ -127,5 +127,6 @@ h4 {
         display: block;
         height: 2rem;
         aspect-ratio: 1;
+        z-index: 1;
     }
 }
